# sidebar_bigeagle

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: .project  build.gradle
example/: .metadata  README.md  pubspec.yaml
example/android/: .project
example/android/app/: .project
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: main.cpp
ios/: sidebar_bigeagle.podspec
ios/Classes/: SidebarBigeaglePlugin.h  SidebarBigeaglePlugin.m
lib/: sidebar_bigeagle.dart  sidebar_bigeagle_web.dart
lib/sidebar/: SideBar.dart
lib/src/: SideBarButton.dart  SideBarButtonFlat.dart
macos/: sidebar_bigeagle.podspec
macos/Classes/: SidebarBigeaglePlugin.swift
sidebar_bigeagle/: README.md  pubspec.yaml
sidebar_bigeagle/android/: .project  settings.gradle
sidebar_bigeagle/example/: pubspec.yaml
sidebar_bigeagle/example/android/: .project
sidebar_bigeagle/example/lib/: main.dart
sidebar_bigeagle/example/web/: manifest.json
sidebar_bigeagle/example/windows/: CMakeLists.txt
sidebar_bigeagle/lib/: sidebar_bigeagle.dart  sidebar_bigeagle_web.dart
sidebar_bigeagle/test/: sidebar_bigeagle_test.dart
sidebar_bigeagle/windows/: CMakeLists.txt  sidebar_bigeagle_plugin.cpp
test/: sidebar_bigeagle_test.dart
(+13 files in other folders)
